--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -24,39 +24,46 @@
     "first load data, get all years together\n",
     "what is devtest???\n",
     "\n",
-    "volgens mij gaat dit goed, misschien even checken\n",
-    "\n",
-    "TODO: idee: _alle_ data van vorige jaren gebruiken voor train, en dan alleen nieuwste voor test gebruiken..."
+    "ik doe wat ze in paper hebben gedaan (alle data van vorige jaren = train,+ train van dit jaar), maar toch is er evenveel test als train ongeveer, wat ik raar vind.) het lijkt alsof er minder train dan test data is ook (bijv 2015) -> dat is toch raar hahah"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all years together\n",
-    "def concatenate_files(name: Literal[\"train\",\"test\",\"dev\"], path=\"data/downloaded/\") -> None:\n",
-    "    # regex to capture the dataset name so you only get {name} type files\n",
-    "    r = '[a-z]+\\-\\d{4}([a-z]+)-'\n",
+    "def concatenate_train_data(path=\"data/downloaded/\") -> None:\n",
+    "    # write all data from previous years to new file, as in paper\n",
+    "    r = '[a-z]+-(\\d{4})'\n",
     "    onlyfiles = [f for f in os.listdir(\"data/downloaded\") if os.path.isfile(os.path.join(\"data/downloaded\", f)) and os.path.join(\"data/downloaded\", f)[-5] == \"A\"]\n",
-    "    filenames = [f for f in onlyfiles if re.match(r, f).group(1) == name]\n",
+    "    filenames = [f for f in onlyfiles if re.match(r, f).group(1) != \"2016\"]\n",
+    "    filenames.append(\"twitter-2016train-A.tsv\")\n",
     "\n",
-    "    with open(f'{path}twitter-{name}.tsv', 'w') as outfile:\n",
-    "        for fname in filenames:\n",
-    "            with open(path+fname) as infile:\n",
-    "                for line in infile:\n",
-    "                    outfile.write(line)"
+    "    print(filenames)\n",
+    "\n",
+    "    # with open(f'{path}twitter-train.tsv', 'w') as outfile:\n",
+    "    #     for fname in filenames:\n",
+    "    #         with open(path+fname) as infile:\n",
+    "    #             for line in infile:\n",
+    "    #                 outfile.write(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['twitter-2013train-A.tsv', 'twitter-2015test-A.tsv', 'twitter-2015train-A.tsv', 'twitter-2013dev-A.tsv', 'twitter-2013test-A.tsv', 'twitter-2014sarcasm-A.tsv', 'twitter-2014test-A.tsv', 'twitter-2016train-A.tsv']\n"
+     ]
+    }
+   ],
    "source": [
-    "for name in [\"train\", \"test\", \"dev\"]:\n",
-    "    concatenate_files(name)"
+    "concatenate_train_data()"
    ]
   },
   {
@@ -68,23 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32082 56842 7240\n"
+      "(25534, 2) (20632, 2) (1966, 2)\n"
      ]
     }
    ],
    "source": [
     "train = pd.read_csv(\"data/downloaded/twitter-train.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
-    "test = pd.read_csv(\"data/downloaded/twitter-test.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
-    "dev = pd.read_csv(\"data/downloaded/twitter-dev.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
+    "test = pd.read_csv(\"data/downloaded/twitter-2016test-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
+    "dev = pd.read_csv(\"data/downloaded/twitter-2016dev-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
     "\n",
-    "print(train.size, test.size, dev.size)"
+    "print(train.shape, test.shape, dev.shape)"
    ]
   },
   {
@@ -96,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -134,35 +141,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>2374</td>\n",
-       "      <td>4356</td>\n",
-       "      <td>731</td>\n",
+       "      <td>3862</td>\n",
+       "      <td>3231</td>\n",
+       "      <td>391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>neutral</th>\n",
-       "      <td>6840</td>\n",
-       "      <td>13511</td>\n",
-       "      <td>1485</td>\n",
+       "      <td>10755</td>\n",
+       "      <td>10342</td>\n",
+       "      <td>746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>6827</td>\n",
-       "      <td>10554</td>\n",
-       "      <td>1404</td>\n",
+       "      <td>10917</td>\n",
+       "      <td>7059</td>\n",
+       "      <td>829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          train   test   dev\n",
-       "label                       \n",
-       "negative   2374   4356   731\n",
-       "neutral    6840  13511  1485\n",
-       "positive   6827  10554  1404"
+       "          train   test  dev\n",
+       "label                      \n",
+       "negative   3862   3231  391\n",
+       "neutral   10755  10342  746\n",
+       "positive  10917   7059  829"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
