--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "from tabulate import tabulate\n",
-    "from typing import Literal\n",
+    "from typing import Literal, List\n",
     "import re\n",
     "sns.set_style(\"whitegrid\")"
    ]
@@ -29,41 +29,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def concatenate_train_data(path=\"data/downloaded/\") -> None:\n",
-    "    # write all data from previous years to new file, as in paper\n",
-    "    r = '[a-z]+-(\\d{4})'\n",
-    "    onlyfiles = [f for f in os.listdir(\"data/downloaded\") if os.path.isfile(os.path.join(\"data/downloaded\", f)) and os.path.join(\"data/downloaded\", f)[-5] == \"A\"]\n",
-    "    filenames = [f for f in onlyfiles if re.match(r, f).group(1) != \"2016\"]\n",
-    "    filenames.append(\"twitter-2016train-A.tsv\")\n",
-    "\n",
-    "    print(filenames)\n",
-    "\n",
-    "    # with open(f'{path}twitter-train.tsv', 'w') as outfile:\n",
-    "    #     for fname in filenames:\n",
-    "    #         with open(path+fname) as infile:\n",
-    "    #             for line in infile:\n",
-    "    #                 outfile.write(line)"
+    "def get_filenames(dataset: Literal[\"train\",\"test\"], path=\"data/downloaded/\") -> List[str]:\n",
+    "    if dataset == \"train\":\n",
+    "        r = '[a-z]+-(\\d{4})'\n",
+    "        onlyfiles = [f for f in os.listdir(\"data/downloaded\") if os.path.isfile(os.path.join(\"data/downloaded\", f)) and os.path.join(\"data/downloaded\", f)[-5] == \"A\"]\n",
+    "        return [f for f in onlyfiles if f not in [\"twitter-2016dev-A.tsv\", \"twitter-2016devtest-A.tsv\", \"twitter-2016train-A.tsv\"]]\n",
+    "    return [\"twitter-2016dev-A.tsv\", \"twitter-2016devtest-A.tsv\", \"twitter-2016train-A.tsv\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['twitter-2013train-A.tsv', 'twitter-2015test-A.tsv', 'twitter-2015train-A.tsv', 'twitter-2013dev-A.tsv', 'twitter-2013test-A.tsv', 'twitter-2014sarcasm-A.tsv', 'twitter-2014test-A.tsv', 'twitter-2016train-A.tsv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "concatenate_train_data()"
+    "def concatenate_data(dataset: Literal[\"train\",\"test\"], path=\"data/downloaded/\") -> None:\n",
+    "    # write all data from previous years to new file, as in paper\n",
+    "    filenames = get_filenames(dataset, path=path)\n",
+    "\n",
+    "    with open(f'{path}twitter-{dataset}.tsv', 'w') as outfile:\n",
+    "        for fname in filenames:\n",
+    "            with open(path+fname) as infile:\n",
+    "                for line in infile:\n",
+    "                    outfile.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concatenate_data(\"train\")\n",
+    "concatenate_data(\"test\")"
    ]
   },
   {
@@ -75,23 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(25534, 2) (20632, 2) (1966, 2)\n"
+      "train: 80%, test: 20%\n",
+      "train: 40297, test: 9834\n"
      ]
     }
    ],
    "source": [
     "train = pd.read_csv(\"data/downloaded/twitter-train.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
-    "test = pd.read_csv(\"data/downloaded/twitter-2016test-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
-    "dev = pd.read_csv(\"data/downloaded/twitter-2016dev-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
+    "test = pd.read_csv(\"data/downloaded/twitter-test.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
+    "# dev = pd.read_csv(\"data/downloaded/twitter-2016dev-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
     "\n",
-    "print(train.shape, test.shape, dev.shape)"
+    "print(f\"train: {round(train.shape[0]/(train.shape[0]+test.shape[0])*100)}%, test: {round(test.shape[0]/(train.shape[0]+test.shape[0])*100)}%\")\n",
+    "print(f\"train: {train.shape[0]}, test: {test.shape[0]}\")"
    ]
   },
   {
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -129,11 +133,9 @@
        "      <th></th>\n",
        "      <th>train</th>\n",
        "      <th>test</th>\n",
-       "      <th>dev</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>label</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -141,35 +143,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>3862</td>\n",
-       "      <td>3231</td>\n",
-       "      <td>391</td>\n",
+       "      <td>6243</td>\n",
+       "      <td>1566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>neutral</th>\n",
-       "      <td>10755</td>\n",
-       "      <td>10342</td>\n",
-       "      <td>746</td>\n",
+       "      <td>19096</td>\n",
+       "      <td>3428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>10917</td>\n",
-       "      <td>7059</td>\n",
-       "      <td>829</td>\n",
+       "      <td>14958</td>\n",
+       "      <td>4840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          train   test  dev\n",
-       "label                      \n",
-       "negative   3862   3231  391\n",
-       "neutral   10755  10342  746\n",
-       "positive  10917   7059  829"
+       "          train  test\n",
+       "label                \n",
+       "negative   6243  1566\n",
+       "neutral   19096  3428\n",
+       "positive  14958  4840"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,10 +176,10 @@
    "source": [
     "train_class_counts = train.groupby('label').count().rename({\"text\":\"train\"}, axis=1)\n",
     "test_class_counts = test.groupby('label').count().rename({\"text\":\"test\"}, axis=1)\n",
-    "dev_class_counts = dev.groupby('label').count().rename({\"text\":\"dev\"}, axis=1)\n",
+    "# dev_class_counts = dev.groupby('label').count().rename({\"text\":\"dev\"}, axis=1)\n",
     "\n",
     "\n",
-    "pd.concat([train_class_counts, test_class_counts, dev_class_counts], axis=1)"
+    "pd.concat([train_class_counts, test_class_counts], axis=1)"
    ]
   },
   {
