--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "positive  14958  4840"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,8 @@
     "train_class_counts = train.groupby('label').count().rename({\"text\":\"train\"}, axis=1)\n",
     "test_class_counts = test.groupby('label').count().rename({\"text\":\"test\"}, axis=1)\n",
     "# dev_class_counts = dev.groupby('label').count().rename({\"text\":\"dev\"}, axis=1)\n",
+    "\n",
+    "#TODO we moeten nog dev hebben: 80/20 split van train??\n",
     "\n",
     "\n",
     "pd.concat([train_class_counts, test_class_counts], axis=1)"
@@ -194,10 +196,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>Picturehouse's, Pink Floyd's, 'Roger Waters: T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>Order Go Set a Watchman in store or through ou...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>negative</td>\n",
+       "      <td>If these runway renovations at the airport pre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>If you could ask an onstage interview question...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>A portion of book sales from our Harper Lee/Go...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      label                                               text\n",
+       "0   neutral  Picturehouse's, Pink Floyd's, 'Roger Waters: T...\n",
+       "1   neutral  Order Go Set a Watchman in store or through ou...\n",
+       "2  negative  If these runway renovations at the airport pre...\n",
+       "3   neutral  If you could ask an onstage interview question...\n",
+       "4  positive  A portion of book sales from our Harper Lee/Go..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocessing:\n",
+    "\n",
+    "def preprocess(data: pd.DataFrame, name: str) -> pd.DataFrame:\n",
+    "        \n",
+    "    # remove urls\n",
+    "    data_clean = data.copy()\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'https?:\\/\\/\\S+','',x))\n",
+    "\n",
+    "    # remove emailadresses\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\w+@\\w+\\.[a-z]+','',x))\n",
+    "\n",
+    "    # remove html ref\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'&[a-z]+;', '', x))\n",
+    "\n",
+    "    # remove non-letter characters, numbers \n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"[^a-zA-Z\\s\\(\\-:\\)\\\\\\/\\];='\\.\\!\\?\\,]\", '', x))\n",
+    "\n",
+    "    # remove all @ mention\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'@\\w+', '', x))\n",
+    "\n",
+    "    # remove trailing whitespace\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\s+', ' ', x).strip())\n",
+    "\n",
+    "    data_clean.to_csv(f\"data/downloaded/twitter-{name}-clean.tsv\", sep=\"\\t\", index=False,header=False)\n",
+    "\n",
+    "\n",
+    "# overige dingen: afkortingen? getallen kunnen belangrijk zijn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_cleaned = preprocess(train, \"train\")\n",
+    "test_cleaned = preprocess(test, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# tokenizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# experiment: probeer de verschillende instellingen aangeraden door autheurs"
+   ]
   }
  ],
  "metadata": {
