add baseline, update preprocessing

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import io\n",
     "import os\n",
     "from tabulate import tabulate\n",
     "from typing import Literal, List\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +52,16 @@
     "    # write all data from previous years to new file, as in paper\n",
     "    filenames = get_filenames(dataset, path=path)\n",
     "\n",
-    "    with open(f'{path}twitter-{dataset}.tsv', 'w') as outfile:\n",
+    "    with open(f'{path}twitter-{dataset}.tsv','w', encoding=\"utf-8\") as outfile:\n",
     "        for fname in filenames:\n",
-    "            with open(path+fname) as infile:\n",
+    "            with open(path+fname, \"r\",encoding=\"utf-8\") as infile:\n",
     "                for line in infile:\n",
     "                    outfile.write(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +100,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'Theo Walcott is still shit\\\\u002c watch Rafa and Johnny deal with him on Saturday.'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train.text = train.text.astype('unicode')\n",
+    "train.text[20632].encode(\"ascii\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +190,7 @@
        "positive  14958  4840"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +200,7 @@
     "test_class_counts = test.groupby('label').count().rename({\"text\":\"test\"}, axis=1)\n",
     "# dev_class_counts = dev.groupby('label').count().rename({\"text\":\"dev\"}, axis=1)\n",
     "\n",
-    "#TODO we moeten nog dev hebben: 80/20 split van train??\n",
+    "#TODO we moeten nog dev hebben: 80/20 split van tex\n",
     "\n",
     "\n",
     "pd.concat([train_class_counts, test_class_counts], axis=1)"
@@ -196,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +285,7 @@
        "4  positive  A portion of book sales from our Harper Lee/Go..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,24 +314,34 @@
     "    # remove html ref\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'&[a-z]+;', '', x))\n",
     "\n",
-    "    # remove non-letter characters, numbers \n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"[^a-zA-Z\\s\\(\\-:\\)\\\\\\/\\];='\\.\\!\\?\\,]\", '', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'&amp', '&', x))\n",
+    "\n",
+    "    # remove unicode\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\\\u[a-z0-9]{4}', '', x))\n",
     "\n",
     "    # remove all @ mention\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'@\\w+', '', x))\n",
     "\n",
+    "    # remove non-letter characters, numbers \n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"[^a-zA-Z\\s\\:\\];='\\.\\!\\?\\,]\", ' ', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])st([.,!?\\s])\", ' ', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])th([.,!?\\s])\", ' ', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])nd([.,!?\\s])\", ' ', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])rd([.,!?\\s])\", ' ', x))\n",
+    "\n",
+    "\n",
     "    # remove trailing whitespace\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\s+', ' ', x).strip())\n",
     "\n",
-    "    data_clean.to_csv(f\"data/downloaded/twitter-{name}-clean.tsv\", sep=\"\\t\", index=False,header=False)\n",
+    "    data_clean.to_csv(f\"data/downloaded/twitter-{name}-clean.tsv\", sep=\"\\t\", index=False,header=False,encoding=\"utf-8\")\n",
     "\n",
-    "\n",
+    "    return data_clean\n",
     "# overige dingen: afkortingen? getallen kunnen belangrijk zijn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,12 +351,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# tokenizing"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
