vlgns mij unicode gefixt

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,11 +10,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import io\n",
+    "import codecs\n",
     "import os\n",
     "from tabulate import tabulate\n",
     "from typing import Literal, List\n",
     "import re\n",
+    "\n",
     "sns.set_style(\"whitegrid\")"
    ]
   },
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +53,16 @@
     "    # write all data from previous years to new file, as in paper\n",
     "    filenames = get_filenames(dataset, path=path)\n",
     "\n",
-    "    with open(f'{path}twitter-{dataset}.tsv','w', encoding=\"utf-8\") as outfile:\n",
+    "    with codecs.open(f'{path}twitter-{dataset}.tsv','w', encoding=\"utf-8\") as outfile:\n",
     "        for fname in filenames:\n",
-    "            with open(path+fname, \"r\",encoding=\"utf-8\") as infile:\n",
+    "            with codecs.open(path+fname, \"r\",encoding=\"utf-8\") as infile:\n",
     "                for line in infile:\n",
     "                    outfile.write(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,33 +92,12 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(\"data/downloaded/twitter-train.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
-    "test = pd.read_csv(\"data/downloaded/twitter-test.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
+    "train = pd.read_csv(\"data/downloaded/twitter-train.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"],encoding=\"utf-8\")\n",
+    "test = pd.read_csv(\"data/downloaded/twitter-test.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"],encoding=\"utf-8\")\n",
     "# dev = pd.read_csv(\"data/downloaded/twitter-2016dev-A.tsv\", sep='\\t', usecols=[1,2], names=[\"label\", \"text\"])\n",
     "\n",
     "print(f\"train: {round(train.shape[0]/(train.shape[0]+test.shape[0])*100)}%, test: {round(test.shape[0]/(train.shape[0]+test.shape[0])*100)}%\")\n",
     "print(f\"train: {train.shape[0]}, test: {test.shape[0]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'Theo Walcott is still shit\\\\u002c watch Rafa and Johnny deal with him on Saturday.'"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# train.text = train.text.astype('unicode')\n",
-    "train.text[20632].encode(\"ascii\")"
    ]
   },
   {
@@ -296,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +297,7 @@
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'&amp', '&', x))\n",
     "\n",
     "    # remove unicode\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\\\u[a-z0-9]{4}', '', x))\n",
+    "    # data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\\\u[a-z0-9]{4}', '', x))\n",
     "\n",
     "    # remove all @ mention\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'@\\w+', '', x))\n",
@@ -341,20 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_cleaned = preprocess(train, \"train\")\n",
     "test_cleaned = preprocess(test, \"test\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
