--- a/bert.ipynb
+++ b/bert.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 1 GPU(s) available.\n",
-      "Device name: NVIDIA GeForce RTX 3070\n"
+      "No GPU available, using the CPU instead.\n"
      ]
     }
    ],
@@ -336,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
