--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>6243</td>\n",
+       "      <td>6242</td>\n",
        "      <td>1566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -155,7 +155,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>14958</td>\n",
+       "      <td>14959</td>\n",
        "      <td>4840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -165,12 +165,12 @@
       "text/plain": [
        "          train  test\n",
        "label                \n",
-       "negative   6243  1566\n",
+       "negative   6242  1566\n",
        "neutral   19096  3428\n",
-       "positive  14958  4840"
+       "positive  14959  4840"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
     "        \n",
     "    # remove urls\n",
     "    data_clean = data.copy()\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'https?:\\/\\/\\S+','',x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'https?:\\/\\/t\\.co\\/\\w+','',x))\n",
     "\n",
     "    # remove emailadresses\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\w+@\\w+\\.[a-z]+','',x))\n",
@@ -298,20 +298,21 @@
     "\n",
     "    # remove unicode\n",
     "    # data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\\\u[a-z0-9]{4}', '', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(\"RT : \", '',x))\n",
     "\n",
     "    # remove all @ mention\n",
     "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'@\\w+', '', x))\n",
     "\n",
     "    # remove non-letter characters, numbers \n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"[^a-zA-Z\\s\\:\\];='\\.\\!\\?\\,]\", ' ', x))\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])st([.,!?\\s])\", ' ', x))\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])th([.,!?\\s])\", ' ', x))\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])nd([.,!?\\s])\", ' ', x))\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])rd([.,!?\\s])\", ' ', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"[^a-zA-Z\\s\\:\\];='\\.\\!\\?\\,]\", '', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])st([.,!?\\s])\", r'\\1\\2', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])th([.,!?\\s])\", r'\\1\\2', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])nd([.,!?\\s])\", r'\\1\\2', x))\n",
+    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r\"([.,!?\\s])rd([.,!?\\s])\", r'\\1\\2', x))\n",
     "\n",
     "\n",
     "    # remove trailing whitespace\n",
-    "    data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'\\s+', ' ', x).strip())\n",
+    "    # data_clean['text']=data_clean.text.apply(lambda x: re.sub(r'[\\t \\v]+', '', x).strip())\n",
     "\n",
     "    data_clean.to_csv(f\"data/downloaded/twitter-{name}-clean.tsv\", sep=\"\\t\", index=False,header=False,encoding=\"utf-8\")\n",
     "\n",
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
