--- a/ordinal_regression.ipynb
+++ b/ordinal_regression.ipynb
@@ -27,6 +27,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data, split\n",
+    "train_dev = pd.read_csv(\"data/downloaded/twitter-train-clean.tsv\", names=[\"label\",\"text\"],encoding=\"utf-8\",sep='\\t').dropna()\n",
+    "# train, dev = train_test_split(train_dev, test_size=0.2)\n",
+    "test = pd.read_csv(\"data/downloaded/twitter-test-clean.tsv\", names=[\"label\",\"text\"],encoding=\"utf-8\",sep='\\t').dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
