results of BERT

--- a/data_processing/results_processing.ipynb
+++ b/data_processing/results_processing.ipynb
@@ -16,20 +16,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/bert_tokenized/bert_train_data.pkl\", \"rb\") as f:\n",
+    "with open(\"/data/s1620444/tm/data/bert_tokenized/bert_train_data.pkl\", \"rb\") as f:\n",
     "    train_dev = pickle.load(f)\n",
     "\n",
-    "with open(\"../data/bert_tokenized/bert_test_data.pkl\",\"rb\") as f:\n",
+    "with open(\"/data/s1620444/tm/data/bert_tokenized/bert_test_data.pkl\",\"rb\") as f:\n",
     "    test = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,6 +487,225 @@
    "metadata": {},
    "source": [
     "<h1> train & eval best model 3 x on train_val data </h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bert_confusion_matrix(id, true_labels):\n",
+    "    \"\"\" returns confusion matrix and predicted labels\"\"\"\n",
+    "    reverse_map = {0: \"negative\", 1:\"neutral\",2:\"positive\"}\n",
+    "\n",
+    "    pred_prob = np.load(f\"../results/best_predictions_{id}.npy\")\n",
+    "    pred = pred_prob.argmax(1)\n",
+    "    return pd.crosstab(pd.Series([i for i in true_labels], name = \"True\"), pd.Series([reverse_map[i] for i in pred], name = \"Predicted\"), margins=True), pred\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_labels = test.label.values\n",
+    "\n",
+    "df_confusion_0, pred_0 = bert_confusion_matrix(0, true_labels)\n",
+    "df_confusion_1, pred_1 = bert_confusion_matrix(1, true_labels)\n",
+    "df_confusion_2, pred_2 = bert_confusion_matrix(2, true_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Predicted</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>negative</th>\n",
+       "      <td>916</td>\n",
+       "      <td>550</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>neutral</th>\n",
+       "      <td>627</td>\n",
+       "      <td>2282</td>\n",
+       "      <td>516</td>\n",
+       "      <td>3425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>positive</th>\n",
+       "      <td>191</td>\n",
+       "      <td>1949</td>\n",
+       "      <td>2696</td>\n",
+       "      <td>4836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>1734</td>\n",
+       "      <td>4781</td>\n",
+       "      <td>3312</td>\n",
+       "      <td>9827</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Predicted  negative  neutral  positive   All\n",
+       "True                                        \n",
+       "negative        916      550       100  1566\n",
+       "neutral         627     2282       516  3425\n",
+       "positive        191     1949      2696  4836\n",
+       "All            1734     4781      3312  9827"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_confusion_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get precision, recall, accuracy, f1\n",
+    "def precision(df, sent):\n",
+    "    numerator = df.loc[sent, sent]\n",
+    "    denominator = df.loc[\"All\", sent]\n",
+    "    return numerator/denominator\n",
+    "\n",
+    "def recall(df, sent):\n",
+    "    numerator = df.loc[sent, sent]\n",
+    "    denominator = df.loc[\"All\", sent]\n",
+    "    return numerator/denominator\n",
+    "\n",
+    "def f1(p,r):\n",
+    "    return 2*(p*r)/(p+r)\n",
+    "\n",
+    "def f1pn(fp, fn):\n",
+    "    return 0.5*(fp+fn)\n",
+    "\n",
+    "confusion_dfs = [df_confusion_0, df_confusion_1, df_confusion_2]\n",
+    "precisions = np.array([[precision(d, \"negative\"), precision(d, \"neutral\"), precision(d,\"positive\")] for d in confusion_dfs])\n",
+    "recalls = np.array([[recall(d, \"negative\"), recall(d, \"neutral\"), recall(d,\"positive\")] for d in confusion_dfs])\n",
+    "f1s = np.array([[f1(precisions[i][j], recalls[i][j]) for j in range(3)] for i in range(3)])\n",
+    "avg_f1 = np.array([f1pn(f1s[i][0], f1s[i][2]) for i in range(3)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.52825836 0.477306   0.81400966]\n",
+      " [0.52328289 0.47795341 0.81884277]\n",
+      " [0.53191489 0.47583418 0.81835032]]\n",
+      "[[0.52825836 0.477306   0.81400966]\n",
+      " [0.52328289 0.47795341 0.81884277]\n",
+      " [0.53191489 0.47583418 0.81835032]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_eval = pd.DataFrame(data = np.column_stack((np.concatenate((precisions,recalls,f1s),axis=1),avg_f1)), columns=[\"p_neg\", \"p_neu\", \"p_pos\", \"r_neg\", \"r_neu\", \"r_pos\", \"f1_neg\", \"f1_neu\", \"f1_pos\", \"f1_pn\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_neg     0.000019\n",
+      "p_neu     0.000001\n",
+      "p_pos     0.000007\n",
+      "r_neg     0.000019\n",
+      "r_neu     0.000001\n",
+      "r_pos     0.000007\n",
+      "f1_neg    0.000019\n",
+      "f1_neu    0.000001\n",
+      "f1_pos    0.000007\n",
+      "f1_pn     0.000005\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "p_neg     0.527819\n",
+       "p_neu     0.477031\n",
+       "p_pos     0.817068\n",
+       "r_neg     0.527819\n",
+       "r_neu     0.477031\n",
+       "r_pos     0.817068\n",
+       "f1_neg    0.527819\n",
+       "f1_neu    0.477031\n",
+       "f1_pos    0.817068\n",
+       "f1_pn     0.672443\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df_eval.var(axis=0))\n",
+    "df_eval.mean()"
    ]
   },
   {
