--- a/data_processing/results_processing.ipynb
+++ b/data_processing/results_processing.ipynb
@@ -712,12 +712,296 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> precision, recall, f1 </h1>"
+    "<h1> baseline </h1>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../results/baseline_predictions.pkl\", \"rb\") as f:\n",
+    "    baseline_predictions = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score, precision_score, f1_score\n",
+    "\n",
+    "labels_map = {\"negative\":0, \"neutral\":1, \"positive\":2}\n",
+    "y_true = [labels_map[i] for i in true_labels]\n",
+    "baseline_precisions = np.array([precision_score(y_true,pred,average=None).tolist() for pred in baseline_predictions])\n",
+    "baseline_recalls = np.array([recall_score(y_true,pred,average=None).tolist() for pred in baseline_predictions])\n",
+    "baseline_f1s = np.array([f1_score(y_true,pred,average=None).tolist() for pred in baseline_predictions])\n",
+    "baseline_avg_f1s = np.array([0.5*(baseline_f1s[i][0] + baseline_f1s[i][2]) for i in range(3)])\n",
+    "\n",
+    "df_baseline_eval = pd.DataFrame(data = np.column_stack((np.concatenate((baseline_precisions,baseline_recalls,baseline_f1s),axis=1),baseline_avg_f1s)), columns=[\"p_neg\", \"p_neu\", \"p_pos\", \"r_neg\", \"r_neu\", \"r_pos\", \"f1_neg\", \"f1_neu\", \"f1_pos\", \"f1_pn\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_neg</th>\n",
+       "      <th>p_neu</th>\n",
+       "      <th>p_pos</th>\n",
+       "      <th>r_neg</th>\n",
+       "      <th>r_neu</th>\n",
+       "      <th>r_pos</th>\n",
+       "      <th>f1_neg</th>\n",
+       "      <th>f1_neu</th>\n",
+       "      <th>f1_pos</th>\n",
+       "      <th>f1_pn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.475162</td>\n",
+       "      <td>0.43167</td>\n",
+       "      <td>0.734067</td>\n",
+       "      <td>0.280971</td>\n",
+       "      <td>0.732263</td>\n",
+       "      <td>0.469189</td>\n",
+       "      <td>0.35313</td>\n",
+       "      <td>0.543151</td>\n",
+       "      <td>0.572474</td>\n",
+       "      <td>0.462802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.475162</td>\n",
+       "      <td>0.43167</td>\n",
+       "      <td>0.734067</td>\n",
+       "      <td>0.280971</td>\n",
+       "      <td>0.732263</td>\n",
+       "      <td>0.469189</td>\n",
+       "      <td>0.35313</td>\n",
+       "      <td>0.543151</td>\n",
+       "      <td>0.572474</td>\n",
+       "      <td>0.462802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.475162</td>\n",
+       "      <td>0.43167</td>\n",
+       "      <td>0.734067</td>\n",
+       "      <td>0.280971</td>\n",
+       "      <td>0.732263</td>\n",
+       "      <td>0.469189</td>\n",
+       "      <td>0.35313</td>\n",
+       "      <td>0.543151</td>\n",
+       "      <td>0.572474</td>\n",
+       "      <td>0.462802</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      p_neg    p_neu     p_pos     r_neg     r_neu     r_pos   f1_neg  \\\n",
+       "0  0.475162  0.43167  0.734067  0.280971  0.732263  0.469189  0.35313   \n",
+       "1  0.475162  0.43167  0.734067  0.280971  0.732263  0.469189  0.35313   \n",
+       "2  0.475162  0.43167  0.734067  0.280971  0.732263  0.469189  0.35313   \n",
+       "\n",
+       "     f1_neu    f1_pos     f1_pn  \n",
+       "0  0.543151  0.572474  0.462802  \n",
+       "1  0.543151  0.572474  0.462802  \n",
+       "2  0.543151  0.572474  0.462802  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_baseline_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final_results = pd.concat([df_eval.mean(), df_baseline_eval.mean(), df_eval.var(),df_baseline_eval.var()], axis=1).rename(columns={0:\"bert_mean\", 1:\"baseline_mean\", 2:\"bert_var\", 3:\"baseline_var\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bert_mean</th>\n",
+       "      <th>baseline_mean</th>\n",
+       "      <th>bert_var</th>\n",
+       "      <th>baseline_var</th>\n",
+       "      <th>diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>p_neg</th>\n",
+       "      <td>0.527819</td>\n",
+       "      <td>0.475162</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>4.622232e-33</td>\n",
+       "      <td>0.052657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p_neu</th>\n",
+       "      <td>0.477031</td>\n",
+       "      <td>0.431670</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>4.622232e-33</td>\n",
+       "      <td>0.045362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p_pos</th>\n",
+       "      <td>0.817068</td>\n",
+       "      <td>0.734067</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.083001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r_neg</th>\n",
+       "      <td>0.527819</td>\n",
+       "      <td>0.280971</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.246848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r_neu</th>\n",
+       "      <td>0.477031</td>\n",
+       "      <td>0.732263</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-0.255232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r_pos</th>\n",
+       "      <td>0.817068</td>\n",
+       "      <td>0.469189</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.347878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f1_neg</th>\n",
+       "      <td>0.527819</td>\n",
+       "      <td>0.353130</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.174689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f1_neu</th>\n",
+       "      <td>0.477031</td>\n",
+       "      <td>0.543151</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-0.066120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f1_pos</th>\n",
+       "      <td>0.817068</td>\n",
+       "      <td>0.572474</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.244594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f1_pn</th>\n",
+       "      <td>0.672443</td>\n",
+       "      <td>0.462802</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>4.622232e-33</td>\n",
+       "      <td>0.209641</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        bert_mean  baseline_mean  bert_var  baseline_var      diff\n",
+       "p_neg    0.527819       0.475162  0.000019  4.622232e-33  0.052657\n",
+       "p_neu    0.477031       0.431670  0.000001  4.622232e-33  0.045362\n",
+       "p_pos    0.817068       0.734067  0.000007  0.000000e+00  0.083001\n",
+       "r_neg    0.527819       0.280971  0.000019  0.000000e+00  0.246848\n",
+       "r_neu    0.477031       0.732263  0.000001  0.000000e+00 -0.255232\n",
+       "r_pos    0.817068       0.469189  0.000007  0.000000e+00  0.347878\n",
+       "f1_neg   0.527819       0.353130  0.000019  0.000000e+00  0.174689\n",
+       "f1_neu   0.477031       0.543151  0.000001  0.000000e+00 -0.066120\n",
+       "f1_pos   0.817068       0.572474  0.000007  0.000000e+00  0.244594\n",
+       "f1_pn    0.672443       0.462802  0.000005  4.622232e-33  0.209641"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final_results[\"diff\"] = df_final_results[\"bert_mean\"]-df_final_results[\"baseline_mean\"]\n",
+    "df_final_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
